Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:92:44: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball1 .Physics(&score1, &score2, dt);
                                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:92:44: note: candidate is:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note: void Ball::Physics(int*, int*, int, int)
     void Physics(int* score1, int* score2, int dt, int p);
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note:   candidate expects 4 arguments, 3 provided
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:93:44: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball2 .Physics(&score1, &score2, dt);
                                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:93:44: note: candidate is:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note: void Ball::Physics(int*, int*, int, int)
     void Physics(int* score1, int* score2, int dt, int p);
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note:   candidate expects 4 arguments, 3 provided
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:94:44: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball3 .Physics(&score1, &score2, dt);
                                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:94:44: note: candidate is:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note: void Ball::Physics(int*, int*, int, int)
     void Physics(int* score1, int* score2, int dt, int p);
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:45:10: note:   candidate expects 4 arguments, 3 provided
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: At global scope:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:174:6: warning: unused parameter 'p' [-Wunused-parameter]
 void Ball::Physics(int* score1, int* score2, int dt, int p)
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:217:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     double d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                              ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:228:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:242:43: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                           ^
---------------------------------------------------------------------------------------------
[20.06.2021 13:57:36,29 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
